// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`style @media style 1`] = `
"
    import {collectStyle} from '@hummer/tenon-vue';
    export default (function(){
      
    var ruleSetMap = {\\"global\\":{\\"classList\\":[]}};
    var options = {\\"scoped\\":false,\\"packageName\\":\\"@hummer/tenon-vue\\"};
  
      return collectStyle(ruleSetMap, options);
    })();
  "
`;

exports[`style Compile Style Base 1`] = `
"
    import {collectStyle} from '@hummer/tenon-vue';
    export default (function(){
      
    var ruleSetMap = {\\"global\\":{\\"classList\\":[{\\"relation\\":null,\\"selector\\":\\"box\\",\\"style\\":{\\"boxSizing\\":\\"border-box\\"},\\"matchType\\":0}]}};
    var options = {\\"scoped\\":false,\\"packageName\\":\\"@hummer/tenon-vue\\"};
  
      return collectStyle(ruleSetMap, options);
    })();
  "
`;

exports[`style Compile Style With Comma Selector 1`] = `
"
    import {collectStyle} from '@hummer/tenon-vue';
    export default (function(){
      
    var ruleSetMap = {\\"global\\":{\\"classList\\":[{\\"relation\\":null,\\"selector\\":\\"box\\",\\"style\\":{\\"boxSizing\\":\\"border-box\\"},\\"matchType\\":0},{\\"relation\\":null,\\"selector\\":\\"box-item\\",\\"style\\":{\\"boxSizing\\":\\"border-box\\"},\\"matchType\\":0}]}};
    var options = {\\"scoped\\":false,\\"packageName\\":\\"@hummer/tenon-vue\\"};
  
      return collectStyle(ruleSetMap, options);
    })();
  "
`;

exports[`style Compile Style With Multi Selector 1`] = `
"
    import {collectStyle} from '@hummer/tenon-vue';
    export default (function(){
      
    var ruleSetMap = {\\"global\\":{\\"classList\\":[{\\"relation\\":null,\\"selector\\":\\"box.box-item\\",\\"style\\":{\\"boxSizing\\":\\"border-box\\"},\\"matchType\\":0}]}};
    var options = {\\"scoped\\":false,\\"packageName\\":\\"@hummer/tenon-vue\\"};
  
      return collectStyle(ruleSetMap, options);
    })();
  "
`;

exports[`style Compile Style With Multi Selector2 1`] = `
"
    import {collectStyle} from '@hummer/tenon-vue';
    export default (function(){
      
    var ruleSetMap = {\\"global\\":{\\"classList\\":[{\\"relation\\":null,\\"selector\\":\\"box-item\\",\\"style\\":{\\"boxSizing\\":\\"border-box\\"},\\"matchType\\":0}]}};
    var options = {\\"scoped\\":false,\\"packageName\\":\\"@hummer/tenon-vue\\"};
  
      return collectStyle(ruleSetMap, options);
    })();
  "
`;

exports[`style Compile Style With Scoped 1`] = `
"
    import {collectStyle} from '@hummer/tenon-vue';
    export default (function(){
      
    var ruleSetMap = {\\"global\\":{\\"classList\\":[]},\\"test\\":{\\"classList\\":[{\\"relation\\":null,\\"selector\\":\\"box\\",\\"style\\":{\\"boxSizing\\":\\"border-box\\"},\\"matchType\\":0}]}};
    var options = {\\"scoped\\":true,\\"id\\":\\"test\\",\\"packageName\\":\\"@hummer/tenon-vue\\"};
  
      return collectStyle(ruleSetMap, options);
    })();
  "
`;
